# kig-vision

./: .gitignore  README.md  addservice.sh  config.yaml  fullscreenpreview.py  kigvision.service  main.py  pyproject.toml  requirements-dev.txt  restartservice.sh  start.sh
.devcontainer/: devcontainer.json
app/camera/: camera.py
app/config/: config.py
app/web/: .eslintrc.yml  package.json  pnpm-lock.yaml  vite.config.ts
app/window/: __init__.py  previewWidget.py  window.py
src/: fullscreenpreview.py
tests/: camera_test.py
web/: components.d.ts  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  main.js  main.vue  stream.vue
